# narrative-space-llm-65e5-codex

./: .resource_finder_complete  CODE_WALKTHROUGH.md  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/figures/: pipeline.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: classification_results.tex  corpus_balance.tex  key_feature_differences.tex  top_coefficients.tex  writingprompts_features.tex
papers/: README.md
papers/pages/: 1711.07280_vision_language_navigation_r2r_manifest.txt  2404.03622_visualization_of_thought_spatial_reasoning_manifest.txt  2409.15451_tag_map_text_based_map_llm_navigation_manifest.txt  2410.16107_llms_write_like_humans_styles_manifest.txt  2605.04831_storyalign_story_reward_models_manifest.txt  wu_2025_spatial_representation_llms_2d_scene_manifest.txt
results/: config.json  external_ai_corpus.jsonl  features.csv  human_corpus.jsonl
results/evaluations/: analysis_summary.json  (+8 more)
src/: analyze_results.py  common.py  features.py  generate_llm_outputs.py  prepare_corpora.py
(+2 files in other folders)
